--- a/card/style.css
+++ b/card/style.css
@@ -8,20 +8,26 @@
   	font-weight: 300;
 }
 
+body {
+	background-image: url('./img/map.svg');
+	background-attachment: fixed;
+}
+
 body::-webkit-scrollbar {
   width: 0;
 }
 
 b {
 	color: #f05d43;
-	font-weight: 600;
+	font-size: 1.2em;
+	font-weight: 700;
 }
 
 #card {
 	padding: 10px;
 	width: 30%;
 	min-width: 400px;
-	/*background: blue;*/
+	background: #fff;
 	display: flex;
 	flex-direction: column;
 	box-shadow: 0px 0px 8px 2px rgba(34, 60, 80, 0.2);
