--- a/card/style.css
+++ b/card/style.css
@@ -47,22 +47,22 @@ b {
 	transition: all 600ms ease;
 }
 
-#image-holder > img:hover {
+/*#image-holder > img:hover {
 	transform: scale(1.01);
-}
+}*/
 
-#image-holder .image-zoomer {
+/*#image-holder .image-zoomer {
 	width: 50px;
 	height:50px;
 	position: absolute;
 	bottom: 0;
 	right: 0;
 	transition: all 600ms ease;
-}
+}*/
 
-#image-holder .image-zoomer:hover {
+/*#image-holder .image-zoomer:hover {
 	transform: scale(1.2);
-}
+}*/
 
 #image-holder .image-zoomer img {
 	width: 50px;
@@ -70,6 +70,9 @@ b {
 }
 
 .navigation {
+	position: absolute;
+	left: 0;
+	bottom: 0;
 	height: 50px;
 	overflow: hidden;
 	display: flex;
@@ -97,6 +100,7 @@ b {
 .navigation .position-viewer {
 	display: flex;
 	justify-content: center;
+	margin-top: 20px;
 	width: 75%;
 	overflow-x: hidden;
 }
@@ -105,7 +109,7 @@ b {
 	width: 10%;
 	height: 5px;
 	margin-right: 3px; 
-	background: #c4c4c4;
+	background: #fff;
 	transition: all 100ms ease;
 }
 
@@ -113,6 +117,8 @@ b {
 	height: 7px;
 	border-radius: 0 0 4px 4px;
 }
+
+
 
 .navigation .active-block {
 	background: #f05d43;
@@ -136,7 +142,7 @@ b {
 }
 
 #text .description-photo {
-
+	text-align: justify;
 }
 
 .count-shower {
